WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200263
Can't scroll on yummly.co.uk recipe (scale(0) div covers the content and hit-tests)
https://bugs.webkit.org/show_bug.cgi?id=200263
Summary
Can't scroll on yummly.co.uk recipe (scale(0) div covers the content and hit-...
Simon Fraser (smfr)
Reported
2019-07-29 19:02:11 PDT
Can't scroll on yummly.co.uk recipe (scale(0) div covers the content and hit-tests)
Attachments
Patch
(7.61 KB, patch)
2019-07-29 19:04 PDT
,
Simon Fraser (smfr)
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2019-07-29 19:04:35 PDT
Created
attachment 375137
[details]
Patch
Simon Fraser (smfr)
Comment 2
2019-07-29 19:04:37 PDT
<
rdar://problem/53679408
>
EWS Watchlist
Comment 3
2019-07-29 19:06:09 PDT
Attachment 375137
[details]
did not pass style-queue: ERROR: Source/WebKit/UIProcess/RemoteLayerTree/ios/RemoteLayerTreeViews.mm:57: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 4
2019-07-29 22:28:14 PDT
Comment on
attachment 375137
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=375137&action=review
> Source/WebKit/UIProcess/RemoteLayerTree/ios/RemoteLayerTreeViews.mm:56 > + auto frameSize = [view frame].size;
More dots
> Source/WebKit/UIProcess/RemoteLayerTree/ios/RemoteLayerTreeViews.mm:57 > + if (frameSize.width == 0 || frameSize.height == 0)
CGRectIsEmpty?
Simon Fraser (smfr)
Comment 5
2019-07-30 13:22:27 PDT
https://trac.webkit.org/r248015
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug